# tt-task

./: .gitignore  README.md  app.py  candidate_prompts.md  pyproject.toml
doc/: README.md  agent-spec.md  architecture.md  data-model.md  demo-script.md  ground-truth.md  memory-spec.md  tools-spec.md  ui-spec.md
doc/extensions/: RAG_EXTENSION.md
doc/features/: F0-scaffold.md  F1-data-models.md  F2-read-tools.md  F3-investigate.md  F4-sandbox.md  F5-llm.md  F6-agent-graph.md  F7-streamlit-ui.md  F8-integration.md
sandbox/: audit_log.json  invoices.json
src/revenue_leakage_agent/: __init__.py  cli.py  fx.py  graph.py  investigate.py  llm.py  loaders.py  models.py  paths.py  prompts.py  sandbox.py  tool_call_parser.py  tools.py  ui_pending.py
tests/: test_app_pending.py  test_fx.py  test_investigate.py  test_sandbox.py  test_tool_call_parser.py
