[project]
name = "revenue-leakage-agent"
version = "0.1.0"
description = "Revenue Leakage Agent — conversational billing investigation agent"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langgraph>=0.2",
    "litellm>=1.0",
    "langchain-litellm>=0.1",
    "langchain-core>=0.3",
    "pydantic>=2.0",
    "streamlit>=1.30",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]

[project.scripts]
revenue-leakage-agent = "revenue_leakage_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/revenue_leakage_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.mypy]
python_version = "3.13"
strict = true
packages = ["revenue_leakage_agent"]

[dependency-groups]
dev = [
    "mypy>=2.2.0",
]
